fixed overflow-y issue

--- a/app/assets/stylesheets/modal/modal.scss
+++ b/app/assets/stylesheets/modal/modal.scss
@@ -9,7 +9,7 @@
     background: $standard_black;
     background: rgba(0,0,0,.75);
     z-index: 2030;
-    overflow-y: scroll;
+    overflow-y: auto;
 
 
     .modal-child {
