--- a/app/assets/stylesheets/music_player/main_view/main_view.scss
+++ b/app/assets/stylesheets/music_player/main_view/main_view.scss
@@ -16,7 +16,7 @@
     display: flex;
     flex-direction: column;
     min-height: 0;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 
